<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/QuestionBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_q_1"
                style="@style/QuestionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male_or_female" />

            <RadioGroup
                android:id="@+id/radioGroup_q_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/QuestionOptionText"
                    android:id="@+id/radioButton_101-1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    style="@style/QuestionOptionText"
                    android:id="@+id/radioButton_101-2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/QuestionBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionLabel"
                android:id="@+id/textView_debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/button_next1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nextpage1" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>